fix: メイドさんの戦闘、描画、UIおよびテキストの修正と改善
- メイドさんが盾でガードするように戦闘AIの挙動 (MaidCombatBehavior) を修正
- クロスボウ装填ロジックを修正し、正しく射撃と装填が行えるように対応
- 水中で飛び跳ねるのを抑制し静かに浮くメイドさん用の水泳挙動 (MaidSwim) を追加
- 描画時に RenderState (MultiModelRenderState) がアーマーテクスチャとモデル情報を保持するように修正し、アーマー選択画面や着用時のテクスチャ未反映バグを修正
- メイドさんUIの体力ハートと防具表示をバニラのスプライト (blitSprite) 使用に修正し、崩れを改善
- テクスチャ変更画面の左下トグルボタンの重なり順序を修正し、マウスホバー時のツールチップ表示を追加
- 敵対対象タグ変更画面の各項目名を日本語・英語ともにより人間にとってわかりやすい自然な言葉に修正
- カスタムの LittleMaidSpawnEggItem を廃止し、NeoForge標準の SpawnEggItem 登録に移行
- .gitignore に .kilocode/ を追加